fix : changed p tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, dolore!</p>
+    <p>My name is shashvath i'm going to conqueror the world..!</p>
 </body>
 </html>
