--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Docss</title>
 </head>
 <body>
-    <p>My name is shashvath i'm going to conqueror the world..!</p>
+    <p>My name is Shashvath i'm going to conqueror the world..!</p>
 </body>
 </html>
