feat : added h1 tag

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <p>My name is Shashvath i'm going to conqueror the world..!</p>
+    <h1>Hello Shashvath...!</h1>
 </body>
 </html>
