add form and gave input

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <p>My name is Shashvath i'm going to conqueror the world..!hey this is shashvath again doing good man keep going...!</p>
     <h1>Hello Shashvath...!</h1>
+    <form>
+        <input type="text">
+        <input type="number"
+    </form>
 </body>
 </html>
